Updated styles to have correct fonts on pdf

--- a/resume.tex
+++ b/resume.tex
@@ -198,7 +198,7 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 resolution depth maps using electronically scanning RADAR (ESR) sensors found on
 modern cars paired with video
 	\end{itemize}
-	\newline %comment out if including itemize info
+	%\newline %comment out if including itemize info
 	
 %% SNL
 \headerrow
@@ -215,7 +215,7 @@ modern cars paired with video
 			\item Investigated unsupervised background estimation
 				for small, moving targets
 		\end{itemize}
-	\newline
+	%\newline
 
 %% SwRI
 \headerrow
@@ -234,7 +234,7 @@ modern cars paired with video
 				\item Developed algorithms for predicting anomalous events in high dimensional, multi-sensor time series data 
 			\end{itemize}
 	\end{itemize}
-	\newline
+	%\newline
 
 %% ECE 110 TAing
 \headerrow
