Full resume version

--- a/resume.tex
+++ b/resume.tex
@@ -116,7 +116,7 @@ Optimization for Computer Vision, Digital Imaging}
 	{\textbf{Bachelor of Electrical Engineering}}
 	{\textbf{September 2012 - May 2016}}
 
-%Minors: Product Design, Math
+Minors: Product Design, Math
 
 \headerrow
 	{University of Minnesota-Twin Cities}
@@ -148,11 +148,9 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
     {\uline{Frequency-Modulated Continuous-Wave Radar} \textit{(UIUC)}}
     {November 2017 - December 2019}
     \begin{itemize}
-	\begin{comment}
         \item
         Worked with Professor Minh Do to develop fusion algorithms to generate
 		high resolution depth maps from radar, video, and egomotion data for autonomous vehicle applications
-	\end{comment}
 	\item 
 		Investigated Frequency-Modulated Continuous-Wave (FMCW) radar
 		    chirp parameters using Texas Instruments mmWave platform for
@@ -180,7 +178,6 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 	\end{itemize}
 
 %% Massive MIMO (undergrad honors thesis)
-	\begin{comment}
 \headerrow
 	{\uline{VLSI Design and Evaluation of a Massive MIMO Detection Algorithm} \textit{(UMN)}}
 	{September 2015 - May 2016}
@@ -188,7 +185,6 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 		\item
 		Worked with Professor Gerald Sobelman on surveying and evaluating proposed massive MIMO detection algorithms and implementing one in Verilog for VLSI (project for Honors Thesis) 
 	\end{itemize}
-	\end{comment}
 
 
 %% --- PRIOR WORK EXPERIENCE --- %%
@@ -200,7 +196,6 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 	{\uline{Graduate Student Intern} \textit{(Sandia National Laboratories)}}
 	{September 2018 - December 2019}
 		\begin{itemize}
-			\begin{comment}
 			\item Member of the Sensor Specific Processing team
 				working on the transient detection pipeline
 			\item Developed transient event data simulator with
@@ -210,10 +205,6 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 				detection pipeline
 			\item Investigated unsupervised background estimation
 				for small moving targets
-			\end{comment}
-			\item Developed preliminary precision-recall using
-				synthesized transient event data for a
-				cloud-based detection pipeline
 		\end{itemize}
 	%\newline
 
@@ -221,6 +212,7 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 \headerrow
 	{\uline{Graduate Student in Critical Systems Department} \textit{(Southwest Research Institute)}}
 	{May 2017 - August 2018}
+	\begin{comment}
 	\begin{itemize}
 		\item Trained and tested convolutional neural networks for
 			methane leak detection and segmentation to be
@@ -230,7 +222,7 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 		\item Implemented a parallelized data simulator from MATLAB code in Python to generate datasets
 		\item Developed algorithms for predicting anomalous events in high dimensional, multi-sensor time series data 
 	\end{itemize}
-	\begin{comment}
+	\end{comment}
 	\begin{itemize}%[leftmargin=*]
 		\item[] Summer 2017
 			\begin{itemize}
@@ -245,37 +237,31 @@ Python with TensorFlow and Keras experience, OpenCV, MATLAB, ROS,
 				\item Developed algorithms for predicting anomalous events in high dimensional, multi-sensor time series data 
 			\end{itemize}
 	\end{itemize}
-	\end{comment}
 	%\newline
 
 %% RA
 \headerrow
 	{\uline{Research Assistant} \textit{(UIUC)}}
 	{August 2017 - December 2019}
-	\begin{comment}
 	\begin{itemize}
 		\item Developed online algorithm for unsupervised video object segmentation based on clustering of dense optical flow
 		\item Investigated real-time trackers based on discriminative correlation filters
-        \item Developed RADAR-video fusion algorithms to generate high
-resolution depth maps using electronically scanning RADAR (ESR) sensors found on
+        \item Developed radar-video fusion algorithms to generate high
+resolution depth maps using electronically scanning radar (ESR) sensors found on
 modern cars paired with video
 	\end{itemize}
-	\end{comment}
-	\newline %comment out if including itemize info
+	%\newline %comment out if including itemize info
 	
 %% ECE 110 TAing
 \headerrow
 	{\uline{Introduction to Electronics Lab Teaching Assistant} \textit{(UIUC)}}
 	{August 2016 - December 2017}
-	\begin{comment}
 	\begin{itemize}
 		\item Led basic electronics lab sessions weekly and graded lab reports weekly
 	\end{itemize}
-	\end{comment}
 	%\newline %comment out if including itemize info
 
 %% Undergrad
-	\begin{comment}
 %% EE 2001 LA
 \headerrow
 	{\uline{Introduction to Circuits and Electronics Lecture Assistant} \textit{(UMN)}}
@@ -284,24 +270,20 @@ modern cars paired with video
 	\begin{itemize}
 		\item Held weekly office hours to help students learn the basics of circuits and electronics and graded exams
 	\end{itemize}
-	\end{comment}
 	%\newline
 
 
 %% EE 2301 LA
-		\begin{comment}
 \headerrow
 	{\uline{Introduction to Digital System Design Lecture Assistant} \textit{(UMN)}}
 	{September 2015 - December 2015}
 	%\begin{comment}
 	\begin{itemize}
-		\item Held weekly office hours to assit students with learning the basics of digital system design and graded homeworks and exams%, including BOolean algebra, Karnaugh maps, Quine-McCluskey method, sequential logic, and other essential digital design techniques
+		\item Held weekly office hours to assist students with learning the basics of digital system design and graded homeworks and exams%, including BOolean algebra, Karnaugh maps, Quine-McCluskey method, sequential logic, and other essential digital design techniques
 	\end{itemize}
-	\end{comment}
 	%\newline
 
 %% Toro Internship
-		\begin{comment}
 \headerrow
 	{\uline{Commercial Electrical Engineering Intern} \textit{(The Toro Company)}}
 	{May 2015 - August 2015}
@@ -309,20 +291,20 @@ modern cars paired with video
 	\begin{itemize}
 		\item Investigated warranty claims on field-return control boards to determine possible failure modes and the statistics of the failure rates
 		\item Designed prototype wireless test platforms, including a GPS and Bluetooth-based asset tracker and a wireless joystick control platform
-		\item Investigated the internal components and safety ratings for high-current, three-phase AC motor contorllers for comparison against the various vendor ratings, to provide a final recommendation for use in the fully electric mid-duty Toro Workman
+		\item Investigated the internal components and safety ratings for high-current, three-phase AC motor controllers for comparison against the various vendor ratings, to provide a final recommendation for use in the fully electric mid-duty Toro Workman
 	\end{itemize}
-	\end{comment}
+	%\end{comment}
 	%\newline
 
 %% Taylor Center Tutor 
-	\begin{comment}
+	%\begin{comment}
 \headerrow
 	{\uline{Taylor Center Tutor} \textit{(UMN)}}
 	{September 2013 - December 2014}
 	\begin{itemize}	
 		\item Tutored freshmen in Physics I \& II, Calculus I, II, \& III, and Linear Algebra at Frontier Residence Hall
 	\end{itemize}
-	\end{comment}
+	%\end{comment}
 	
 
 
@@ -336,7 +318,7 @@ modern cars paired with video
 
 
 %% --- ACTIVITIES and LEADERSHIP EXPERIENCES --- %%
-\begin{comment}
+%\begin{comment}
 \subsection*{\sansserif{ACTIVITIES AND LEADERSHIP EXPERIENCES:}}
 
 %% HKN - UMN
@@ -421,7 +403,7 @@ modern cars paired with video
 		\item Worked with the Director of Event Development to organize and coordinate the 2014 Relay for Life event at the University of Minnesota
 	\end{itemize}
 
-\end{comment}
+%\end{comment}
 
 %% --- HONORS & AWARDS --- %%
 \begin{comment}
